2011-09-21  Bastian Maerkisch  <bmaerkisch@web.de>

	* demo/borders.dem: Use loop instead of `reread`.

	* demo/image2.dem: Explicitely `reverse` axes.

	* src/win/wgraph.c (drawhraph) [W_filled_polygon_draw]: Transparent
	pattern fill actually fills with white background since 2011-05-15.
	Fixed.

	* src/win/wgnuplib.h src/win/wgraph.c (WndGraphProc) term/win.trm
	(WIN_options, WIN_update_options): Update term options on changes via
	graph window/menu. Track font face and size as read from ini-file.

	* src/stdfn.c|h (gp_basename) term/pslatex.trm (PSTEX_common_init):
	Move code from pslatex.trm to new function gp_basename which takes
	two different directory separators into account and does not change
	its argument.

2011-09-16  Peter Hedwig <peter@affenbande.org>

	* term/lua/gnuplot-tikz.lua:  Modify the commands used for rgb color 
	selection so that they are compatible with context as well as tikz.
	Bug #3401068

2011-09-16  Oliver Jennrich

	* term/lua/gnuplot-tikz.lua:  Update syntax used for setting line join
	properties.
	Bug #3410554

2011-09-12  Bastian Maerkisch  <bmaerkisch@web.de>

	* config/mingw/Makefile: Fix building gnuplot.ps and gnuplot.pdf.
	Include figures in gnuplot.pdf. Define new targets 'console', 'windows'
	and 'pipes' to build different versions of gnuplot. Use separate
	file extensions for each version. Let 'make all' build all versions.
	Match 'install' target to Tatsuro Matsuoka's packages.

2011-09-09  Ethan A Merritt  <merritt@u.washington.edu>

	* docs/doc2tex.c docs/titlepag.tex:  Tweak format of TeX documentation
	(no section numbers in table of contents, text width appropriate for
	paper size).

2011-09-09  Bastian Maerkisch  <bmaerkisch@web.de>

	src/win/wgnuplib.h src/win/wgraph.c src/win/wresourc.h term/win.trm:
	Add a toolbar to the graph window. Currently, it offers icons for Copy,
	Print, Save and Options. Additionaly, plot elements can be temporarily
	hidden, ie. without a `replot`. This is much like what can be done